--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
 spring.application.name=demo
 
 # Enable H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 # Datasource settings
-spring.datasource.url=jdbc:h2:mem:ownifydb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:ownifydb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 # JPA (optional, if you're using Spring Data JPA)
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/ownify?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=0000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
